src/assets/includes/cards.scss
.card {
  display: flex;
  width: 25%;
  flex-direction: column;
  padding: 2rem;
  background-color: $less_dark_color;
  border-radius: 2px;

  &:not(.readOnly):hover {
    background-color: $subtle_color;
    color: $backgound_color;
    cursor: pointer;
    transition: background-color 1s ease, 
                color 500ms ease-in;
  }

  &:not(.readOnly):hover &-meta:before {
    color: $backgound_color;
  }

  &-meta {
    font-size: .75rem;

    &:before {
      margin-right: 5px;
      font-weight: 100;
      color: $subtle_color;
      transition: color 500ms ease-in;
    }
  }
}


.dashboardCard {  
  &-title {
    font-family: $title_font;
    font-size: 1.25rem;
    margin-bottom: .25rem;
  }

  &-value {
    font-size: 1.75rem;
  }
}

.pageCard {
  width: calc(33.33% - 4rem - 1rem);
  row-gap: .25rem;
  
  &-url {
    font-size: 1rem;
    font-weight: bolder;
  }

  &-status:before {
    content: 'Status';
  }
  
  &-linkCount:before {
    content: 'Links';
  }

  &-uniqueHosts:before {
    content: 'Hosts';
  }
}

.siteCard {
  width: calc(25% - 4rem - 1rem);
  row-gap: .25rem;
  
  &-name {
    font-size: 1rem;
    font-weight: bolder;
  }
  
  &-pages:before {
    content: 'Pages';
  }
}

.queueCard {
  padding: 1rem;
  width: 100%;
}

